--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TMenu.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="TTrace.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pmEnv.h">
