--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TInput.cpp" />
+    <ClCompile Include="TMem.cpp" />
     <ClCompile Include="TCplusplus.cpp" />
     <ClCompile Include="TestMain.cpp" />
     <ClCompile Include="TMenu.cpp" />
