Continue to Test Cplusplus

--- a/PMLiteC/PMLitec/Wrk6/PMLiteC/PMLiteC.vcxproj
+++ b/PMLiteC/PMLitec/Wrk6/PMLiteC/PMLiteC.vcxproj
@@ -165,6 +165,9 @@
     <ClCompile Include="..\..\WinNT\pmXTrace.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\inc\cXTrace.h" />
+    <ClInclude Include="..\..\..\inc\cXTypes.h" />
+    <ClInclude Include="..\..\..\inc\pmTrace.h" />
     <ClInclude Include="..\..\Common\cCore.h" />
     <ClInclude Include="..\..\Common\cMemory.h" />
     <ClInclude Include="..\..\Common\cTypes.h" />
