Try change C++14 by C++ 17 there is a byte type redefinition

--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="TInput.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="TContainers.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pmEnv.h">
