--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TContainers.cpp" />
     <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TMem.cpp" />
     <ClCompile Include="TCplusplus.cpp" />
@@ -112,6 +113,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>..\PMLiteC\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
