Addapt ASDLLTrace to Visual Studio 2019 Community

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ PMLiteC/PMLitec/Wrk6/TPMLiteC/Debug/*
 PMLiteC/PMLitec/Wrk6/TPMLiteC/Release/*
 PMLiteC/PMLitec/Wrk6/PMLiteC/Debug/*
 PMLiteC/PMLitec/Wrk6/PMLiteC/Release/*
+ASDLLTrace/ASDLLTraceSources/.vs/ASTrace/v16/
