Add some interfaces to look inside

--- a/PMLiteC/PMLitec/Wrk6/PMLiteC/PMLiteC.vcxproj
+++ b/PMLiteC/PMLitec/Wrk6/PMLiteC/PMLiteC.vcxproj
@@ -168,6 +168,8 @@
     <ClInclude Include="..\..\..\inc\cXTrace.h" />
     <ClInclude Include="..\..\..\inc\cXTypes.h" />
     <ClInclude Include="..\..\..\inc\pmTrace.h" />
+    <ClInclude Include="..\..\..\inc\pmTypes.h" />
+    <ClInclude Include="..\..\..\inc\pmXTrace.h" />
     <ClInclude Include="..\..\Common\cCore.h" />
     <ClInclude Include="..\..\Common\cMemory.h" />
     <ClInclude Include="..\..\Common\cTypes.h" />
