--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="TContainers.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="TVirtual.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pmEnv.h">
