--- a/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
+++ b/ConsoleCPlusPlus/ConsoleCPlusPlus.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="TVirtual.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="TPolymorphism.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TPolymorphism2.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pmEnv.h">
