--- a/ASDLLTrace/ASDLLTraceSources/ASTrace.vcxproj
+++ b/ASDLLTrace/ASDLLTraceSources/ASTrace.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
+    <ProjectGuid>{055F582D-B54F-4750-BD90-1E175A986B09}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
