--- a/ASDLLTrace/ASDLLTraceSources/ASTrace.vcxproj
+++ b/ASDLLTrace/ASDLLTraceSources/ASTrace.vcxproj
@@ -93,8 +93,8 @@
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <PostBuildEvent>
-      <Command>xcopy "$(ProjectDir)Debug\ASTrace.lib" "$(ProjectDir)..\..\ConsoleCPlusPlus\Debug" /Y /F /C
-xcopy "$(ProjectDir)Debug\ASTrace.dll" "$(ProjectDir)..\..\ConsoleCPlusPlus\Debug" /Y /F /C</Command>
+      <Command>
+      </Command>
       <Message>Delivery DLL</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
