--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ PMLiteC/PMLitec/Wrk6/PMLiteC/Debug/*
 PMLiteC/PMLitec/Wrk6/PMLiteC/Release/*
 ASDLLTrace/ASDLLTraceSources/.vs/ASTrace/v16/
 ASReporter/ASReporterSources/.vs/Reporter/v16/
+PMLiteC/PMLitec/Wrk6/.vs/Wrk6/v16/
