--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ PMLiteC/PMLitec/Wrk6/PMLiteC/Release/*
 ASDLLTrace/ASDLLTraceSources/.vs/ASTrace/v16/
 ASReporter/ASReporterSources/.vs/Reporter/v16/
 PMLiteC/PMLitec/Wrk6/.vs/Wrk6/v16/
+PMLiteC/PMLitec/Wrk6/.vs/TPMLite/v16/
